# MyLocalStreaming

./: .env.example  .gitignore  Dockerfile  MUSIC_STREAMING_SPEC.md  QwenNavigation.md  RUN_INSTRUCTIONS.md  Readme.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  alembic.ini  music.db  pyproject.toml  scanner.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  playlists.py  tracks.py
backend/app/models/: playlist.py  session.py  track.py  user.py
backend/app/schemas/: __init__.py  auth.py  playlist.py  track.py
backend/app/services/: auth_service.py  library_scanner.py  metadata_parser.py  streaming.py
backend/app/utils/: deps.py  security.py
backend/music_streaming_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/caddy/: Caddyfile
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/Admin/: AdminPanel.tsx
web/src/components/Player/: PlayerBar.tsx  PlayerControls.tsx
web/src/hooks/: useAudio.ts
web/src/lib/: api.ts  types.ts
web/src/store/: auth.ts  library.ts  player.ts
