[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-streaming-backend"
version = "0.1.0"
description = "Music Streaming Service Backend"
authors = [{name = "Author", email = "author@example.com"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlmodel==0.0.22",
    "asyncpg==0.29.0",
    "python-multipart==0.0.6",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.0",
    "aiosqlite==0.19.0",
    "cachetools==5.3.2",
    "pydantic-settings==2.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.10.1",
    "flake8==6.1.0",
    "mypy==1.7.1"
]